--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "axios": "^1.2.0",
     "expo": "~47.0.7",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "typescript": "^4.6.3",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6"
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
