--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
+    "toastify-react-native": "^3.1.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
